--- a/app/views/survey_sites/_form.html.erb
+++ b/app/views/survey_sites/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.check_box :status %>
+    <%= form.text_field :status %>
   </div>
 
   <div class="field">
