--- a/app/views/survey_sites/_form.html.erb
+++ b/app/views/survey_sites/_form.html.erb
@@ -32,6 +32,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :latitude %>
+    <%= form.text_field :latitude %>
+  </div>
+
+  <div class="field">
     <%= form.label :status %>
     <%= form.text_field :status %>
   </div>
@@ -43,7 +48,7 @@
 
   <div class="field">
     <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.number_field :user_id %>
   </div>
 
   <div class="actions">
