submit api refactor

--- a/app/views/survey_sites/index.html.erb
+++ b/app/views/survey_sites/index.html.erb
@@ -10,6 +10,7 @@
       <th>City</th>
       <th>Longitude</th>
       <th>Status</th>
+      <th>Created At</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= survey_site.city %></td>
         <td><%= survey_site.longitude %></td>
         <td><%= survey_site.status %></td>
+        <td><%= survey_site.created_at %></td>
         <td><%= link_to 'Show', survey_site %></td>
         <td><%= link_to 'Edit', edit_survey_site_path(survey_site) %></td>
         <td><%= link_to 'Destroy', survey_site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
