--- a/app/views/survey_sites/index.html.erb
+++ b/app/views/survey_sites/index.html.erb
@@ -2,13 +2,14 @@
 
 <h1>Survey Sites</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Clientname</th>
       <th>Address</th>
       <th>City</th>
       <th>Longitude</th>
+      <th>Latitude</th>
       <th>Status</th>
       <th>Created At</th>
       <th colspan="3"></th>
@@ -22,11 +23,12 @@
         <td><%= survey_site.address %></td>
         <td><%= survey_site.city %></td>
         <td><%= survey_site.longitude %></td>
+        <td><%= survey_site.latitude %></td>
         <td><%= survey_site.status %></td>
         <td><%= survey_site.created_at %></td>
         <td><%= link_to 'Show', survey_site %></td>
-        <td><%= link_to 'Edit', edit_survey_site_path(survey_site) %></td>
-        <td><%= link_to 'Destroy', survey_site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Edit', edit_survey_site_path(survey_site) %></td>
+        <td><%#= link_to 'Destroy', survey_site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Survey Site', new_survey_site_path %>
+<%#= link_to 'New Survey Site', new_survey_site_path %>
