--- a/app/views/survey_sites/index.html.erb
+++ b/app/views/survey_sites/index.html.erb
@@ -2,16 +2,16 @@
 
 <h1>Survey Sites</h1>
 
-<table class="table">
+<table class="table table-hover table-striped">
   <thead>
     <tr>
-      <th>Clientname</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Longitude</th>
-      <th>Latitude</th>
-      <th>Status</th>
-      <th>Created At</th>
+      <th><%= sortable "Clientname" %></th>
+      <th><%= sortable "Address" %></th>
+      <th><%= sortable "City" %></th>
+      <th><%= sortable "Longitude" %></th>
+      <th><%= sortable "Latitude" %></th>
+      <th><%= sortable "Status" %></th>
+      <th><%= sortable "Created At" %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,7 +24,7 @@
         <td><%= survey_site.city %></td>
         <td><%= survey_site.longitude %></td>
         <td><%= survey_site.latitude %></td>
-        <td><%= survey_site.status %></td>
+        <td><%= SurveySite::STATUS[survey_site.status] %></td>
         <td><%= survey_site.created_at %></td>
         <td><%= link_to 'Show', survey_site %></td>
         <td><%#= link_to 'Edit', edit_survey_site_path(survey_site) %></td>
