--- a/app/views/survey_sites/show.html.erb
+++ b/app/views/survey_sites/show.html.erb
@@ -1,6 +1,3 @@
-<%# TODO: overhaul %>
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Clientname:</strong>
   <%= @survey_site.clientname %>
@@ -22,19 +19,46 @@
 </p>
 
 <p>
-  <strong>Status:</strong>
-  <%= @survey_site.status %>
+  <strong>Latitude:</strong>
+  <%= @survey_site.latitude %>
 </p>
 
 <p>
-  <strong>Sale:</strong>
-  <%= @survey_site.sale_id %>
+  <strong>Created At:</strong>
+  <%= @survey_site.created_at %>
+</p>
+
+<p>
+  <strong>Status:</strong>
+  <%= SurveySite::STATUS[@survey_site.status] %>
+</p>
+
+<p>
+  <strong>Technicians:</strong>
+  <% @survey_site.survey_technicians.each do |technician| %>
+    <p><%= technician.user.email %></p>
+  <% end %>
+</p>
+
+<p>
+  <strong>Images:</strong>
+  <% @survey_site.survey_images.each do |image| %>
+    <p>
+      <img src="data:image/jpeg;base64,<%= Base64.encode64(image.img) %>" />
+      <%= image.name %>
+      <%= image.description %>
+    </p>
+  <% end %>
+</p>
+
+<p>
+  <strong>Sales:</strong>
+  <%= @survey_site.sales.email %>
 </p>
 
 <p>
   <strong>User:</strong>
-  <%= @survey_site.user %>
+  <%= @survey_site.user.email %>
 </p>
 
-<%= link_to 'Edit', edit_survey_site_path(@survey_site) %> |
 <%= link_to 'Back', survey_sites_path %>
